feat: add dataset selection and update UI for recalculation
- Updated app.css to style the new dataset selection dropdown.
- Modified index.html to include a dataset selection dropdown in the calculation bar.
- Enhanced app.js to load datasets from the API and handle dataset selection during recalculation.
- Added a new JSON file for tournament data, including teams, match results, and bingo events.

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -111,7 +111,13 @@
 
     <div class="calc-bar">
       <span class="last-calc" id="last-calc-time"></span>
-      <button class="btn btn-primary" onclick="recalculate()">&#9654; Neu berechnen</button>
+      <div style="display:flex;align-items:center;gap:.6rem;flex-wrap:wrap;">
+        <label for="dataset-select" style="font-size:.85rem;color:var(--muted);white-space:nowrap;">Datensatz:</label>
+        <select id="dataset-select" class="dataset-select">
+          <option value="">Standard (live)</option>
+        </select>
+        <button class="btn btn-primary" onclick="recalculate()">&#9654; Neu berechnen</button>
+      </div>
     </div>
 
     <!-- Stats summary -->
