--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>WM 2026 Tippspiel</title>
-<link rel="stylesheet" href="/css/app.css">
+<link rel="stylesheet" href="/css/app.css?v=3">
 </head>
 <body>
 
@@ -153,6 +153,6 @@
 <div id="spinner"><div class="spin"></div></div>
 <div id="toast"></div>
 
-<script src="/js/app.js"></script>
+<script src="/js/app.js?v=3"></script>
 </body>
 </html>
