--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -4,28 +4,45 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>WM 2026 Tippspiel</title>
-<link rel="stylesheet" href="/css/app.css?v=3">
+<link rel="stylesheet" href="/css/app.css?v=5">
 </head>
 <body>
 
-<header>
-  <span class="logo">&#127942; WM 2026</span>
-  <div>
-    <div style="font-weight:700;font-size:1rem;">Tippspiel &amp; Bingo</div>
-    <div class="sub">Verwaltung der Tipper &amp; Auswertung</div>
+<!-- ═══ LOGIN OVERLAY ═══════════════════════════════════════════════════ -->
+<div id="login-overlay">
+  <div class="login-card">
+    <div class="login-logo">&#127942; WM 2026</div>
+    <div class="login-title">Tippspiel &amp; Bingo</div>
+    <div class="login-sub">Bitte Namen, Tipper-ID oder <strong>Admin</strong> eingeben</div>
+    <form onsubmit="doLogin(event)">
+      <input type="text" id="login-input" class="login-input" placeholder="Name / ID / Admin" autocomplete="off" autofocus>
+      <select id="login-dataset-select" class="login-dataset-select">
+        <option value="vor_turnier">&#128197; Vor dem Turnier</option>
+        <option value="nach_gruppe">&#9917; Nach der Gruppenphase</option>
+        <option value="nach_turnier">&#127942; Nach dem Turnier</option>
+      </select>
+      <button type="submit" class="btn btn-primary login-btn">&#10132; Weiter</button>
+    </form>
+    <div id="login-error" class="login-error" style="display:none;"></div>
   </div>
+</div>
+
+<header style="display:none;" id="main-header">
+  <span class="logo">&#127942; WM 2026</span>
+  <div style="flex:1;">
+    <div style="font-weight:700;font-size:1rem;">Tippspiel &amp; Bingo</div>
+    <div class="sub" id="header-sub">Verwaltung der Tipper &amp; Auswertung</div>
+  </div>
+  <button class="btn btn-ghost btn-sm" onclick="doLogout()" style="margin-left:auto;">&#8617; Abmelden</button>
 </header>
 
-<!-- Main navigation -->
-<nav class="main-nav">
-  <button class="nav-btn active" onclick="switchMain(this,'page-users')">&#128101; Tipper</button>
-  <button class="nav-btn" onclick="switchMain(this,'page-ranking')">&#127942; Auswertung</button>
-</nav>
+<!-- Main navigation (dynamically populated) -->
+<nav class="main-nav" id="main-nav" style="display:none;"></nav>
 
 <div class="container">
 
-  <!-- ═══ PAGE: TIPPER ════════════════════════════════════════════════════ -->
-  <div id="page-users" class="main-page">
+  <!-- ═══ PAGE: TIPPER (Admin only) ════════════════════════════════════ -->
+  <div id="page-users" class="main-page" style="display:none;">
 
     <!-- List view -->
     <div id="view-list">
@@ -106,18 +123,57 @@
     </div>
   </div>
 
+  <!-- ═══ PAGE: MEINE TIPPS (User mode) ═══════════════════════════════ -->
+  <div id="page-my-tips" class="main-page" style="display:none;">
+
+    <!-- Lock banner (shown when betting is locked) -->
+    <div id="my-lock-banner" class="lock-banner" style="display:none;">
+      &#128274; <strong>Tipps gesperrt</strong> &ndash;
+      F&uuml;r den gew&auml;hlten Datensatz sind die Tipps gesperrt.
+      Deine abgegebenen Tipps werden unten ausgewertet.
+    </div>
+
+    <!-- Save bar (shown when editable) -->
+    <div id="my-save-bar" class="my-save-bar" style="display:none;">
+      <span style="color:var(--muted);font-size:.85rem;">&#9997; Du kannst deine Tipps noch &auml;ndern.</span>
+      <button class="btn btn-success" onclick="saveMyTips()">&#10003; Tipps speichern</button>
+    </div>
+
+    <div class="tab-bar" id="my-tab-bar">
+      <button class="tab-btn active" onclick="switchTab(this,'mt-groups')">&#9917; Gruppenspiele</button>
+      <button class="tab-btn" onclick="switchTab(this,'mt-ko')">&#127942; K.O.-Runden</button>
+      <button class="tab-btn" onclick="switchTab(this,'mt-special')">&#11088; Sondertipps</button>
+      <button class="tab-btn" onclick="switchTab(this,'mt-bingo')">&#127920; Bingo-Karte</button>
+    </div>
+
+    <div id="mt-groups" class="tab-panel active">
+      <div id="my-group-matches-container"><div class="empty-state">Lade Spiele ...</div></div>
+    </div>
+
+    <div id="mt-ko" class="tab-panel">
+      <div id="my-ko-rounds-container"><div class="empty-state">Lade KO-Runden ...</div></div>
+    </div>
+
+    <div id="mt-special" class="tab-panel">
+      <div id="my-special-container"><div class="empty-state">Lade Sondertipps ...</div></div>
+    </div>
+
+    <div id="mt-bingo" class="tab-panel">
+      <div id="my-bingo-container"><div class="empty-state">Lade Bingo-Karte ...</div></div>
+    </div>
+  </div>
+
   <!-- ═══ PAGE: AUSWERTUNG ════════════════════════════════════════════════ -->
   <div id="page-ranking" class="main-page" style="display:none;">
 
-    <div class="calc-bar">
+    <div class="calc-bar" id="admin-calc-bar">
       <span class="last-calc" id="last-calc-time"></span>
       <div style="display:flex;align-items:center;gap:.6rem;flex-wrap:wrap;">
-        <label for="dataset-select" style="font-size:.85rem;color:var(--muted);white-space:nowrap;">Datensatz:</label>
-        <select id="dataset-select" class="dataset-select">
-          <option value="">Standard (live)</option>
-        </select>
         <button class="btn btn-primary" onclick="recalculate()">&#9654; Neu berechnen</button>
       </div>
+    </div>
+    <div id="user-calc-bar" style="display:none;">
+      <span class="last-calc" id="user-last-calc-time"></span>
     </div>
 
     <!-- Stats summary -->
@@ -153,6 +209,6 @@
 <div id="spinner"><div class="spin"></div></div>
 <div id="toast"></div>
 
-<script src="/js/app.js?v=3"></script>
+<script src="/js/app.js?v=7"></script>
 </body>
 </html>
